--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^4.17.2
   firebase_auth: ^4.19.4
   firebase_storage: ^11.7.4
+  firebase_messaging: ^14.9.2
   fluttertoast: ^8.2.5
   font_awesome_flutter: ^10.7.0
   google_sign_in: ^6.2.1
