--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,8 @@ dependencies:
   url_launcher: ^6.2.6
   geocoder2: ^1.4.0
   intl: ^0.19.0
-
+  flutter_local_notifications: ^17.2.1+2
+  timeago: ^3.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
