--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_local_notifications: ^17.2.1+2
   timeago: ^3.7.0
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -61,6 +62,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -85,7 +87,10 @@ flutter:
     - images/fs.png
     - images/foodiemadoodie.png
 
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/fslogok.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
